--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,8 @@
         <script src="scripts/controllers/refer-contacts.js"></script>
         <script src="scripts/controllers/loyalty.js"></script>
         <script src="scripts/filters/search-selector-filter.js"></script>
+
+        <script src="scripts/translators/main.translator.js"></script>
         <!-- endbuild -->
 </body>
 </html>
