--- a/app/index.html
+++ b/app/index.html
@@ -28,16 +28,6 @@
 
     <!-- Add your site or application content here -->
     <div ng-controller="TopbarCtrl" ng-include="'views/topbar.html'"></div>
-    <!--<div id="wrapper" class="clearfix container">-->
-      <!--<div class="clearfix row">-->
-        <!--<section id="main" class="col-lg-12">-->
-          <!--<div id="load">-->
-            <!--<img src="images/loading.gif" alt="Loading...">&nbsp;&nbsp;Please wait...-->
-          <!--</div>-->
-          <!--<div ui-view=""></div>-->
-        <!--</section>-->
-      <!--</div>-->
-    <!--</div>-->
     <div ui-view=""></div>
     <div ng-controller="FooterCtrl" ng-include="'views/footer.html'"></div>
 
@@ -72,6 +62,8 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/services/mainService.js"></script>
         <script src="scripts/controllers/topbar.js"></script>
@@ -94,6 +86,8 @@
         <script src="scripts/filters/search-selector-filter.js"></script>
 
         <script src="scripts/translators/main.translator.js"></script>
+        <script src="scripts/translators/my-contacts.translator.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
