translate order-progress page

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.css">
+    <!--<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.css">-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css">
 
@@ -86,7 +86,10 @@
         <script src="scripts/filters/search-selector-filter.js"></script>
 
         <script src="scripts/translators/main.translator.js"></script>
+        <script src="scripts/translators/auth.translator.js"></script>
         <script src="scripts/translators/my-contacts.translator.js"></script>
+        <script src="scripts/translators/order-progress.translator.js"></script>
+        <script src="scripts/translators/order-offer.translator.js"></script>
 
         <!-- endbuild -->
 </body>
