translate order-order page

--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,8 @@
         <script src="scripts/translators/my-contacts.translator.js"></script>
         <script src="scripts/translators/order-progress.translator.js"></script>
         <script src="scripts/translators/order-offer.translator.js"></script>
+        <script src="scripts/translators/order-order.translator.js"></script>
+        <script src="scripts/translators/order-payment.translator.js"></script>
 
         <!-- endbuild -->
 </body>
