translate my_account page

--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,8 @@
         <script src="scripts/translators/order-offer.translator.js"></script>
         <script src="scripts/translators/order-order.translator.js"></script>
         <script src="scripts/translators/order-payment.translator.js"></script>
+        <script src="scripts/translators/my-account.translator.js"></script>
+        <script src="scripts/translators/setting.translator.js"></script>
 
         <!-- endbuild -->
 </body>
