translate mass-mailing page

--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,7 @@
         <script src="scripts/translators/order-order.translator.js"></script>
         <script src="scripts/translators/order-payment.translator.js"></script>
         <script src="scripts/translators/my-account.translator.js"></script>
+        <script src="scripts/translators/mass-mailing.translator.js"></script>
         <script src="scripts/translators/setting.translator.js"></script>
 
         <!-- endbuild -->
