create mail-upload translator

--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
         <script src="scripts/translators/order-payment.translator.js"></script>
         <script src="scripts/translators/my-account.translator.js"></script>
         <script src="scripts/translators/mass-mailing.translator.js"></script>
+        <script src="scripts/translators/mass-mailing-upload.translator.js"></script>
         <script src="scripts/translators/ship-to-contact.translator.js"></script>
         <script src="scripts/translators/setting.translator.js"></script>
 
