--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,7 @@
         <script src="scripts/translators/mass-mailing-upload.translator.js"></script>
         <script src="scripts/translators/ship-to-contact.translator.js"></script>
         <script src="scripts/translators/credit-account.translator.js"></script>
+        <script src="scripts/translators/my-store.translator.js"></script>
         <script src="scripts/translators/setting.translator.js"></script>
 
         <!-- endbuild -->
