create referral translator

--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,9 @@
         <script src="scripts/translators/credit-account.translator.js"></script>
         <script src="scripts/translators/my-store.translator.js"></script>
         <script src="scripts/translators/setting.translator.js"></script>
+        <script src="scripts/translators/my-settings.translator.js"></script>
+        <script src="scripts/translators/refer-contacts.translator.js"></script>
+        <script src="scripts/translators/loyalty.translator.js"></script>
 
         <!-- endbuild -->
 </body>
