--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
+    <link rel="stylesheet" href="bower_components/intl-tel-input/build/css/intlTelInput.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -58,6 +59,8 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-ui-select/dist/select.js"></script>
     <script src="bower_components/ng-lodash/build/ng-lodash.js"></script>
+    <script src="bower_components/intl-tel-input/build/js/intlTelInput.js"></script>
+    <script src="bower_components/ng-intl-tel-input/dist/ng-intl-tel-input.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -105,6 +108,7 @@
         <script src="scripts/translators/refer-contacts.translator.js"></script>
         <script src="scripts/translators/loyalty.translator.js"></script>
 
+        <script src="bower_components/intl-tel-input/build/js/utils.js"></script>
         <!-- endbuild -->
 </body>
 </html>
