fix loyalty page

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,8 @@
     <script src="bower_components/ng-lodash/build/ng-lodash.js"></script>
     <script src="bower_components/intl-tel-input/build/js/intlTelInput.js"></script>
     <script src="bower_components/ng-intl-tel-input/dist/ng-intl-tel-input.js"></script>
+    <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+    <script src="bower_components/angularjs-dropdown-multiselect/src/angularjs-dropdown-multiselect.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
